--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -1,1 +1,5 @@
-<h1> I am a header</h1>
+<head>
+    <title>{{.PageTitle}}</title>
+    <link rel="stylesheet" href="/static/css/styles.css">
+</head>
+<body>
