--- a/templates/list.tmpl
+++ b/templates/list.tmpl
@@ -1,12 +1,26 @@
 {{ template "header.tmpl" . }}
-<h1>{{.PageTitle}}</h1>
 <ul class="gamesList">
-    {{range .Games}}
+    {{range .Page.Games}}
         <li class="game">
-            <span class="gameTitle">{{.PrimaryTitle}}</span>
-            <span class="gameYear">({{.Year}})</span>
-            <span class="gameGeekRating">{{.BayesRating}}</span>
-            <span class="gameAlgoRating">{{.AvgRating}}</span>
+            <div class="{{.RankClass}}">{{.Rank}}</div>
+            <img class="gamePictureImg" src="/static/images/covers/{{.GeekId}}.jpg" />
+            <div class="{{.TitleClass}}">{{.PrimaryTitle}}</div>
+            <div class="gameMainAttributes">
+                <span class="gameMainAttribute gameLength">
+                    <svg class="gameMainAttributeSvg" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-labelledby="timeIconTitle" color="#000" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/><path d="M12 5v7l4 4"/></svg>
+                    {{.Playtime}} min.</span
+                >
+                <span class="gameMainAttribute gameNumPlayers">
+                <svg class="gameMainAttributeSvg" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-labelledby="peopleIconTitle" color="#000" viewBox="0 0 24 24"><path d="M1 18c0-2.25 3-2.25 4.5-3.75.75-.75-1.5-.75-1.5-4.5C4 7.25025 4.99975 6 7 6s3 1.25025 3 3.75c0 3.75-2.25 3.75-1.5 4.5C10 15.75 13 15.75 13 18m-.2081886-2.2733316c.4922437-.1784024.8956748-.343369 1.2102931-.4948999C14.552776 14.9665463 15.0840574 14.6659426 15.5 14.25c.75-.75-1.5-.75-1.5-4.5C14 7.25025 14.99975 6 17 6s3 1.25025 3 3.75c0 3.75-2.25 3.75-1.5 4.5C20 15.75 23 15.75 23 18"/><path d="M12 16c.3662741-.1236528.6302112-.2147634.7918114-.2733316"/></svg>
+                    {{.Players}}</span
+                >
+                <span class="gameMainAttribute gameComplexity">
+                    {{.Complexity}}<span/
+                >
+            </div>
+            <div class="gameMoreArrow">
+                <svg class="gameMoreArrowSvg" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="4 7 16 10"><path d="m6 9 6 6 6-6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/></svg>            </div>
+            <div class="gameRating">{{.Rating}}</div>
         </li>
     {{end}}
 </ul>
