--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -1,9 +1,11 @@
+<!DOCTYPE html>
 <head>
     <title>{{.Global.PageTitle}}</title>
     <link rel="stylesheet" href="/static/css/styles.css?{{.Global.Now}}">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
     <div id="header">
-        <span class="logo">100 Board Games</span>
+        <span class="logo"></span>
     </div>
     <div id="grid">
