--- a/static/css/header.css
+++ b/static/css/header.css
@@ -1,4 +1,3 @@
-
 @font-face {
     font-family: 'acknowledgement';
     src: url('/static/fonts/acknowledgement-webfont.woff2') format('woff2'),
@@ -8,15 +7,24 @@
 }
 
 #header {
-    height: 40px;
-    background: #23572B;
-    padding-left: 40px;
+    background: hsl(150, 50%, 25%);
+    padding-left: 0.5rem;
 }
 
 .logo {
     font-family: "Acknowledgement";
-    font-size: 24;
+    font-size: 24px;
     line-height: 40px;
-    color: #FFF;
+    color: #FFF; 
     text-shadow: 1px 1px 0px black;
+}
+
+.logo:before {
+    content: "100BG";
+}
+
+@media (min-width: 640px) {
+    .logo:before {
+        content: "100 Board Games";
+    }
 }
