--- a/templates/footer.tmpl
+++ b/templates/footer.tmpl
@@ -1,4 +1,9 @@
     </div>
+    <div id="footer">
+        <div>© {{.Global.CurrentYear}} 100 Board Games.</div>
+        <div>Powered by <a href="https://boardgamegeek.com" rel="noopener noreferrer" target="_blank">BoardGameGeek</a>.</div>
+        <div>All rights reserved. All trademarks are property of their respective owners.</div>
+    </div>
 {{range .Global.JsPaths}}
     <script type="module" src="/{{.}}"></script>
 {{end}}
