--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,6 +5,7 @@
 :root {
     --game-extra-picture-height: 300px;
     --game-extra-small-picture-height: 75px;
+    --game-extra-small-picture-arrow-size: 0.5rem;
 
     --game-extra-picture-border-hsl: hsl(150, 50%, 20%);
 }
@@ -239,18 +240,19 @@ body {
     cursor: pointer;
     display: inline-block;
     width: 25%;
+    height: calc(var(--game-extra-small-picture-height) + var(--game-extra-small-picture-arrow-size) + 2px); /** ~2px for shadow */
     vertical-align: top;
     position: relative;
     filter: drop-shadow(#000 0 0 0.05rem)
 }
 .gameExtraSmallPicture--active::after {
     content: '';
-    border-left: 0.5rem solid transparent;
-    border-right: 0.5rem solid transparent;
-    border-top: 0.5rem solid var(--game-extra-picture-border-hsl);
+    border-left: var(--game-extra-small-picture-arrow-size) solid transparent;
+    border-right: var(--game-extra-small-picture-arrow-size) solid transparent;
+    border-top: var(--game-extra-small-picture-arrow-size) solid var(--game-extra-picture-border-hsl);
     position: absolute;
     top: var(--game-extra-small-picture-height);
-    left: calc(50% - 0.5rem);
+    left: calc(50% - var(--game-extra-small-picture-arrow-size));
 }
 .gameExtraSmallPicture--active>.gameExtraSmallPictureImg {
     border: 4px solid var(--game-extra-picture-border-hsl);
@@ -264,28 +266,22 @@ body {
     border-radius: 2px;
 }
 
-.gameExtraSmallPictureArrow {
-    border-left: 0.5rem solid transparent;
-    border-right: 0.5rem solid transparent;
-    border-top: 0.5rem solid var(--game-extra-picture-border-hsl);
-    position: absolute;
-    top: var(--game-extra-small-picture-height);
-    left: calc(50% - 0.5rem)
-}
-
 .gameExtraBigPictureImg {
-    width: 100%;
-    height: var(--game-extra-picture-height);
-    border-radius: 2px;
+    width: 98%;
+    height: 98%;
+    margin-left: 1%;
+    margin-top: 1%;
+    border-radius: 0.1rem;
     margin-right: 2rem;
     scroll-snap-align: center;
     object-fit: cover;
+    box-shadow: #000 0 0 0.1rem 0.1rem;
 }
 
 .gameExtraDescription {
     grid-column: 1;
     grid-row: 3;
-    margin-top: 1rem;
+    margin-top: 0.5rem;
     justify-self: start;
 }
 
