add hover effects

--- a/templates/gamesExtras.tmpl
+++ b/templates/gamesExtras.tmpl
@@ -40,7 +40,7 @@ function formGameExtraHtml(gameGeekId, gameExtra) {
             <div class="gameExtraSmallPictures">${smallPicturesHtml}</div>
             <div class="gameExtraBigPictures">${bigPicturesHtml}</div>
             <div class="gameExtraDescription">${description}</div>
-            <button class="gameExtraHideButton">
+            <button class="gamecardToggleButton gameExtraHideButton">
                 <div class="gameExpandArrow gameExpandArrow--reverse"></div>
             </button>
         </div>
