--- a/templates/list.tmpl
+++ b/templates/list.tmpl
@@ -27,7 +27,7 @@
                     --><span class="gameMainAttributeLabel gameComplexityLabel">{{.ComplexityLabel}}</span><!--
                 --></span>
             </div>
-            <button class="gameMoreButton">
+            <button class="gamecardToggleButton gameMoreButton">
                 <div class="gameExpandArrow"></div>
             </button>
         </li>
