--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -116,6 +116,11 @@ body {
     white-space: nowrap;
 }
 
+.gameMainAttributes > .gameMainAttribute:focus-visible,
+.gameMainAttributes > .gameMainAttribute:hover {
+    filter: saturate(200%);
+}
+
 .gameMainAttributes > .gameMainAttribute {
     cursor: pointer;
     margin-right: 0.25rem;
@@ -159,6 +164,9 @@ body {
 .gameMoreButton {
     grid-column: 3;
     grid-row: 3;
+}
+
+.gamecardToggleButton {
     width: 100%;
     height: 100%;
     cursor: pointer;
@@ -166,6 +174,10 @@ body {
     background: #FFF;
     padding: 0;
     border-radius: 2px;
+}
+.gamecardToggleButton:focus-visible > .gameExpandArrow,
+.gamecardToggleButton:hover > .gameExpandArrow {
+    opacity: 0.5;
 }
 
 .gameExpandArrow {
@@ -254,7 +266,7 @@ body {
     top: var(--game-extra-small-picture-height);
     left: calc(50% - var(--game-extra-small-picture-arrow-size));
 }
-.gameExtraSmallPicture--active>.gameExtraSmallPictureImg {
+.gameExtraSmallPicture--active > .gameExtraSmallPictureImg {
     border: 4px solid var(--game-extra-picture-border-hsl);
 }
 
@@ -288,13 +300,7 @@ body {
 .gameExtraHideButton {
     grid-column: 1;
     grid-row: 4;
-    width: 100%;
     height: 2rem;
-    cursor: pointer;
-    border-style: none;
-    background: #FFF;
-    padding: 0;
-    border-radius: 2px;
 }
 
 /* === */
