--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <head>
-    <title>{{.Global.PageTitle}}</title>
-    <link rel="stylesheet" href="/static/css/styles.css?{{.Global.Now}}">
+    {{range .Global.CssPaths}}
+        <link rel="stylesheet" href="/static/css/{{.}}">
+    {{end}}
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>{{.Global.PageTitle}}</title>
 </head>
 <body>
-    <div id="header">
+    <header>
         <span class="logo"></span>
-    </div>
-    <div id="grid">
+    </header>
+    <main>
