Add About Page. Add i18n skeleton. A11y improvements

--- a/templates/footer.tmpl
+++ b/templates/footer.tmpl
@@ -1,5 +1,6 @@
     </main>
     <footer>
+        <h2 class="a11y-hide">{{.Global.SharedI18n.a11y_footer}}</h2>
         <div>© {{.Global.CurrentYear}} 100 Board Games.</div>
         <div>Powered by <a href="https://boardgamegeek.com" rel="noopener noreferrer" target="_blank">BoardGameGeek</a>.</div>
         <div>All rights reserved. All trademarks are property of their respective owners.</div>
