--- a/static/css/global.css
+++ b/static/css/global.css
@@ -27,7 +27,7 @@ html {
 body {
     margin: 0;
     padding: 0;
-    background-color: hsl(150, 15%, 85%);
+    background-color: var(--background-color);
     min-height: 100%;
     display: grid;
     grid-template-rows: auto 1fr auto;
@@ -44,20 +44,22 @@ footer {
 }
 
 a {
-    color: hsl(150, 100%, 15%);
+    color: hsl(150, 100%, 23.75%);
 }
 
 b {
     font-family: 'Pragati Narrow Bold', sans-serif;
+    font-weight: normal;
 }
 
 p {
     margin: 0;
     white-space: pre-line;
+    max-width: 66ch;
 }
 
 p + p {
-    margin-top: revert;
+    margin-top: 2rem;
 }
 
 *:focus-visible {
@@ -66,8 +68,10 @@ p + p {
 }
 
 :root {    
+    --background-color: hsl(150, 25%, 90%);
+
     --scaling-factor: 1.25vw;
-    --text-color: hsl(150, 40%, 10%);
+    --text-color: hsl(150, 30%, 10%);
 
     --font-size-default: calc(12px + var(--scaling-factor));
     --font-size-header: 1.5rem;
@@ -75,27 +79,12 @@ p + p {
     --font-size-tertiary: 0.6rem;
 }
 
-/**/
-
-#header {
-    background: hsl(150, 50%, 25%);
-    padding-left: 0.5rem;
-}
-
-.logo {
-    font-family: "Acknowledgement";
-    font-size: 1.5rem;
-    line-height: 2.5rem;
-    color: #FFF; 
-    text-shadow: 0 0 0.1rem #000;
-}
-
-.logo:before {
-    content: "100BG";
-}
-
-@media (min-width: 640px) {
-    .logo:before {
-        content: "100 Board Games";
-    }
+.a11y-hide {
+    position: absolute;
+    left: -10000px;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    color: var(--background-color);
+    filter: invert(100%);
 }
