--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -1,6 +1,6 @@
 {{ template "header.tmpl" . }}
     <pre id="titleHeader">Hundred Board Games</pre>
-    <p>{{.Global.PageI18n.intro}} {{.Global.PageI18n.about_preface}} <a href="/about" id="aboutAnchor" target="_blank" rel="noopener noreferrer">{{.Global.PageI18n.about_link}}</a>.</p>
+    <p>{{.Global.PageI18n.intro}} <a href="/about" rel="noopener noreferrer" target="_blank">{{.Global.PageI18n.about_link}}</a>.</p>
     <div class="buttonSection">
         <p>{{.Global.PageI18n.top_text}}</p>
         <a href="/top" class="linkButton">{{.Global.PageI18n.top_button}}</a>
