--- a/static/css/top.css
+++ b/static/css/top.css
@@ -72,6 +72,7 @@
     white-space: nowrap;
     max-width: 100%;
     line-height: 1;
+    font-weight: normal;
 }
 .gameTitle--small95 {
     font-size: calc(0.95 * var(--font-size-header));
