--- a/templates/list.tmpl
+++ b/templates/list.tmpl
@@ -2,28 +2,28 @@
 <ul class="gamesList">
     {{range .Page.Games}}
         <li class="game" data-geek-id="{{.GeekId}}" data-avg-weight="{{.AvgWeight}}" data-weight-num-votes="{{.WeightNumVotes}}" tabindex="0">
-            <div class="communityNumPlayers hidden"
-                {{range $i, $e := .CommunityNumPlayers}}
-                    data-players{{$i}}="{{$e.NumPlayers}},{{$e.VotedBest}},{{$e.VotedRecommended}},{{$e.VotedNotRecommended}}"
-                {{end}}
-            ></div>
+            <div class="communityNumPlayers hidden">
+                {{range $i, $e := .CommunityNumPlayers}}<!--
+                -->|{{$e.NumPlayers}},{{$e.VotedBest}},{{$e.VotedRecommended}},{{$e.VotedNotRecommended}}<!--
+                -->{{end}}
+            </div>
             <div class="{{.RankClass}}">{{.Rank}}</div>
             <div class="gameRating">{{.Rating}}</div>
             <img class="gamePictureImg lazy" data-src="{{.CardPictureUrl}}" src="/static/images/other/question100.png"/>
-            <div class="{{.TitleClass}}">{{.PrimaryTitle}}</div>
+            <h3 class="{{.TitleClass}}">{{.PrimaryTitle}}</h3>
             <div class="gameMainAttributes">
                 <span class="gameMainAttribute gameLength" tabindex="0"><!--
-                    --><svg class="gameMainAttributeSvg" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-labelledby="timeIconTitle" color="#000" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/><path d="M12 5v7l4 4"/></svg><!--
+                    --><svg class="gameMainAttributeSvg" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" color="#000" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/><path d="M12 5v7l4 4"/></svg><!--
                     --><span class="gameMainAttributeLabel">{{.Playtime}} min.</span><!--
                 --></span><!--
                 --><span class="gameMainAttribute gameNumPlayers" tabindex="0"><!--
-                    --><svg class="gameMainAttributeSvg" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-labelledby="peopleIconTitle" color="#000" viewBox="0 0 24 24"><path d="M1 18c0-2.25 3-2.25 4.5-3.75.75-.75-1.5-.75-1.5-4.5C4 7.25025 4.99975 6 7 6s3 1.25025 3 3.75c0 3.75-2.25 3.75-1.5 4.5C10 15.75 13 15.75 13 18m-.2081886-2.2733316c.4922437-.1784024.8956748-.343369 1.2102931-.4948999C14.552776 14.9665463 15.0840574 14.6659426 15.5 14.25c.75-.75-1.5-.75-1.5-4.5C14 7.25025 14.99975 6 17 6s3 1.25025 3 3.75c0 3.75-2.25 3.75-1.5 4.5C20 15.75 23 15.75 23 18"/><path d="M12 16c.3662741-.1236528.6302112-.2147634.7918114-.2733316"/></svg><!--
+                    --><svg class="gameMainAttributeSvg" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" color="#000" viewBox="0 0 24 24"><path d="M1 18c0-2.25 3-2.25 4.5-3.75.75-.75-1.5-.75-1.5-4.5C4 7.25025 4.99975 6 7 6s3 1.25025 3 3.75c0 3.75-2.25 3.75-1.5 4.5C10 15.75 13 15.75 13 18m-.2081886-2.2733316c.4922437-.1784024.8956748-.343369 1.2102931-.4948999C14.552776 14.9665463 15.0840574 14.6659426 15.5 14.25c.75-.75-1.5-.75-1.5-4.5C14 7.25025 14.99975 6 17 6s3 1.25025 3 3.75c0 3.75-2.25 3.75-1.5 4.5C20 15.75 23 15.75 23 18"/><path d="M12 16c.3662741-.1236528.6302112-.2147634.7918114-.2733316"/></svg><!--
                     --><span class="gameMainAttributeLabel">{{.Players}}</span><!--
                 --></span><!--
                 --><span class="gameMainAttribute gameComplexity" tabindex="0"><!--
-                    --><svg class="gameMainAttributeSvg {{index .ComplexityClasses 0}}" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-labelledby="extensionIconTitle" color="#000" viewBox="0 0 24 24"><path d="M9 4a2 2 0 1 1 4 0v2h5v5h2a2 2 0 1 1 0 4h-2v5h-5v-2a2 2 0 1 0-4 0v2H4v-5h2a2 2 0 1 0 0-4H4V6h5V4Z"/></svg><!--
-                    --><svg class="gameMainAttributeSvg {{index .ComplexityClasses 1}}" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-labelledby="extensionIconTitle" color="#000" viewBox="0 0 24 24"><path d="M9 4a2 2 0 1 1 4 0v2h5v5h2a2 2 0 1 1 0 4h-2v5h-5v-2a2 2 0 1 0-4 0v2H4v-5h2a2 2 0 1 0 0-4H4V6h5V4Z"/></svg><!--
-                    --><svg class="gameMainAttributeSvg {{index .ComplexityClasses 2}}" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-labelledby="extensionIconTitle" color="#000" viewBox="0 0 24 24"><path d="M9 4a2 2 0 1 1 4 0v2h5v5h2a2 2 0 1 1 0 4h-2v5h-5v-2a2 2 0 1 0-4 0v2H4v-5h2a2 2 0 1 0 0-4H4V6h5V4Z"/></svg><!--
+                    --><svg class="gameMainAttributeSvg {{index .ComplexityClasses 0}}" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" color="#000" viewBox="0 0 24 24"><path d="M9 4a2 2 0 1 1 4 0v2h5v5h2a2 2 0 1 1 0 4h-2v5h-5v-2a2 2 0 1 0-4 0v2H4v-5h2a2 2 0 1 0 0-4H4V6h5V4Z"/></svg><!--
+                    --><svg class="gameMainAttributeSvg {{index .ComplexityClasses 1}}" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" color="#000" viewBox="0 0 24 24"><path d="M9 4a2 2 0 1 1 4 0v2h5v5h2a2 2 0 1 1 0 4h-2v5h-5v-2a2 2 0 1 0-4 0v2H4v-5h2a2 2 0 1 0 0-4H4V6h5V4Z"/></svg><!--
+                    --><svg class="gameMainAttributeSvg {{index .ComplexityClasses 2}}" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" color="#000" viewBox="0 0 24 24"><path d="M9 4a2 2 0 1 1 4 0v2h5v5h2a2 2 0 1 1 0 4h-2v5h-5v-2a2 2 0 1 0-4 0v2H4v-5h2a2 2 0 1 0 0-4H4V6h5V4Z"/></svg><!--
                     --><span class="gameMainAttributeLabel gameComplexityLabel">{{.ComplexityLabel}}</span><!--
                 --></span>
             </div>
